# koalify

./: LICENSE  README.md  pyproject.toml  version.json
.github/workflows/: ci.yml
koalify/: __init__.py  comparisons.py  criteria.py  fields.py  rule_matcher.py
tests/: test_rule_matcher.py
