[tool.poetry]
name = "koalify"
version = "1.1.0"
description = "A compact predicate DSL for matching criteria against any object"
authors = ["Dragos Dumitrache <dragos@afterburner.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pydantic = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
